--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
                     <tbody>
                         <tr v-for="item in cart.items">
                             <td>{{ item.product.name }}</td>
-                            <td>{{ item.quantity }}</td>
+                            <td>
+                                {{ item.quantity }}
+                                <button class="btn btn-success" @click="increaseCartItem(item)" :disabled="item.product.inStock === 0">+</button>
+                                <button class="btn btn-danger" @click="decreaseQuantity(item)" :disabled="item.quantity === 0">-</button>
+                            </td>
                             <td>{{ item.quantity * item.product.price | currency }}</td>
                         </tr>
 
