--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>E-commerce Example Application</title>
+    <title>My E-commerce Example Application</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
@@ -12,16 +12,16 @@
         <div class="container">
             <br>
             <nav id="top-navigation" class="well well-sm flex flex-row align-center">
-                <a href="#" @click.prevent="isShowingCart = false"><strong>E-commerce Inc.</strong></a>
+                <a href="#" @click.prevent="isShowingCart=false"><strong>E-commerce Inc.</strong></a>
 
                 <div class="text-right pull-right cart-info">
-                    <span class="stats">{{ cart.items.length }} <template v-if="cart.items.length === 1">item</template> <template v-else>items</template> in cart, totalling {{ cartTotal | currency }}</span>
+                    <span class="stats">{{ cart.items.length}} <template v-if="cart.items.length === 1">item</template> <template v-else>items</template> in cart, totalling {{ cartTotal | currency }}</span>
                     <button class="btn btn-primary" @click="isShowingCart = true">View Cart</button>
                 </div>
             </nav>
 
             <div v-if="!isShowingCart" id="products" class="row list-group">
-                <div v-for="product in products" class="item col-xs-4">
+                <div class="item col-xs-4" v-for="product in products">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="http://placehold.it/400x250/000/fff">
                         <div class="caption">
@@ -31,14 +31,14 @@
 
                             <div class="row flex flex-row align-center">
                                 <div class="col-xs-4">
-                                    <p class="lead">{{ product.price | currency }}</p>
+                                    <p class="lead">{{ product.price | currency}}</p>
                                 </div>
 
                                 <div class="col-xs-8 flex flex-row align-center justify-right">
-                                    <div class="number-in-stock" :class="{ few: product.inStock < 10, none: product.inStock === 0}">
+                                    <div class="number-in-stock" :class="{ few: product.inStock < 10, none: product.inStock === 0 }">
                                         {{ product.inStock }} in stock
                                     </div>
-                                    <button class="btn btn-success" @click="addToCart(product)" :disabled="product.inStock === 0">Add to cart</button>
+                                    <button class="btn btn-success" @click="addProductToCart(product)" :disabled="product.inStock === 0">Add to cart</button>
                                 </div>
                             </div>
                         </div>
@@ -61,8 +61,8 @@
                             <td>{{ item.product.name }}</td>
                             <td>
                                 {{ item.quantity }}
-                                <button class="btn btn-success" @click="increaseCartItem(item)" :disabled="item.product.inStock === 0">+</button>
-                                <button class="btn btn-danger" @click="decreaseQuantity(item)" :disabled="item.quantity === 0">-</button>
+                                <button class="btn btn-success" @click="increaseCartItems(item)" :disabled="item.product.inStock === 0">+</button>
+                                <button class="btn btn-danger" @click="decreaseCartItems(item)" >-</button>
                             </td>
                             <td>{{ item.quantity * item.product.price | currency }}</td>
                         </tr>
@@ -72,7 +72,7 @@
                                 <strong>Subtotal</strong>
                             </td>
 
-                            <td>{{ cartTotal | currency }}</td>
+                            <td>{{ cartTotal | currency}}</td>
                         </tr>
 
                         <tr>
@@ -80,20 +80,30 @@
                                 <strong>Taxes</strong>
                             </td>
 
-                            <td>{{ taxAmount | currency }}</td>
+                            <td>{{ taxAmount | currency}}</td>
+                        </tr>
+
+                        <tr v-if="kupon">
+                            <td class="text-right" colspan="2">
+                                <strong>kupon</strong>
+                            </td>
+
+                            <td> -{{ (cartTotal + taxAmount) * 0.1 | currency }} </td>
                         </tr>
 
                         <tr>
                             <td class="text-right" colspan="2">
                                 <strong>Grand total</strong>
                             </td>
-
-                            <td>{{ cartTotal + taxAmount | currency }}</td>
+                            <td v-if="kupon">{{ (cartTotal + taxAmount) * 0.9 | currency }} </td>
+                            <td v-else>{{ (cartTotal + taxAmount) | currency }} </td>
                         </tr>
+
+
 
                         <tr>
                             <td colspan="2"></td>
-                            <td><button class="btn btn-success">Checkout</button></td>
+                            <td><button class="btn btn-success" @click="checkout">Checkout</button></td>
                         </tr>
                     </tbody>
                 </table>
